# vhost

./: .travis.yml  CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  coverage_config_aarch64.json  coverage_config_x86_64.json
.buildkite/: README.md  custom-tests.json  pipeline.yml  rust-vmm-ci-tests.json
.github/: dependabot.yml
.github/workflows/: main.yml  release-vhost-user-backend.yml  release-vhost.yml
crates/vhost/: CHANGELOG.md  Cargo.toml  README.md
crates/vhost-user-backend/: CHANGELOG.md  Cargo.toml  README.md
crates/vhost-user-backend/src/: backend.rs  event_loop.rs  handler.rs  lib.rs  vring.rs
crates/vhost-user-backend/tests/: vhost-user-server.rs
crates/vhost-user-frontend/: Cargo.toml
crates/vhost-user-frontend/src/: device.rs  generic.rs  lib.rs  thread_helper.rs
crates/vhost-user-frontend/src/vhost_user/: mod.rs  vu_common_ctrl.rs
crates/vhost/docs/: vhost_architecture.drawio
crates/vhost/src/: backend.rs  vdpa.rs
crates/vhost/src/vhost_kern/: mod.rs  net.rs  vdpa.rs  vhost_binding.rs  vsock.rs
crates/vhost/src/vhost_user/: backend.rs  backend_req_handler.rs  connection.rs  dummy_backend.rs  dummy_slave.rs  frontend.rs  frontend_req_handler.rs  master.rs  master_req_handler.rs  message.rs  mod.rs  slave_req.rs  slave_req_handler.rs
src/: backend.rs  event_loop.rs  handler.rs  lib.rs  net.rs  vdpa.rs  vring.rs  vsock.rs
src/vhost_kern/: mod.rs  net.rs  vdpa.rs  vhost_binding.rs  vsock.rs
src/vhost_user/: connection.rs  dummy_slave.rs  master.rs  master_req_handler.rs  message.rs  mod.rs  slave.rs  slave_fs_cache.rs  slave_req_handler.rs  sock_ctrl_msg.rs
tests/: vhost-user-server.rs
vhost/: CHANGELOG.md  Cargo.toml  README.md
vhost-user-backend/: CHANGELOG.md  Cargo.toml  README.md
vhost-user-backend/src/: backend.rs  bitmap.rs  event_loop.rs  handler.rs  lib.rs  vring.rs
vhost-user-backend/tests/: atomic-bitmap-compiles.rs  vhost-user-server.rs
vhost/src/: backend.rs  lib.rs
vhost/src/vhost_kern/: mod.rs  net.rs  vdpa.rs  vsock.rs
vhost/src/vhost_user/: backend.rs  backend_req.rs  backend_req_handler.rs  connection.rs  dummy_backend.rs  frontend.rs  frontend_req_handler.rs  gpu_backend_req.rs  gpu_message.rs  message.rs  mod.rs
