[package]
name = "vhost-user-backend"
version = "0.1.0"
authors = ["The Cloud Hypervisor Authors"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
epoll = ">=4.0.1"
libc = ">=0.2.39"
log = ">=0.4.6"
vhost = { version = "0.1", features = ["vhost-user-slave"] }
virtio-bindings = "0.1"
virtio-queue = { git = "https://github.com/rust-vmm/vm-virtio" }
vm-memory = {version = "0.6", features = ["backend-mmap", "backend-atomic"]}
vmm-sys-util = "0.8"
