[package]
name = "vhost-user-backend"
version = "0.15.0"
authors = ["The Cloud Hypervisor Authors"]
keywords = ["vhost-user", "virtio"]
description = "A framework to build vhost-user backend service daemon"
repository = "https://github.com/rust-vmm/vhost"
edition = "2021"
license = "Apache-2.0"

[features]
xen = ["vm-memory/xen", "vhost/xen"]
postcopy = ["vhost/postcopy", "userfaultfd"]
gpu-socket = ["vhost/gpu-socket"]

[dependencies]
libc = "0.2.39"
log = "0.4.17"
userfaultfd = { version = "0.8.1", optional = true }
vhost = { path = "../vhost", version = "0.11", features = ["vhost-user-backend"] }
virtio-bindings = "0.2.1"
virtio-queue = "0.12.0"
vm-memory = { version = "0.14.0", features = ["backend-mmap", "backend-atomic"] }
vmm-sys-util = "0.12.1"

[dev-dependencies]
nix = { version = "0.29", features = ["fs"] }
vhost = { path = "../vhost", version = "0.11", features = ["test-utils", "vhost-user-frontend", "vhost-user-backend"] }
vm-memory = { version = "0.14.0", features = ["backend-mmap", "backend-atomic", "backend-bitmap"] }
tempfile = "3.2.0"
