[package]
name = "vhost-user-backend"
version = "0.17.0"
authors = ["The Cloud Hypervisor Authors"]
keywords = ["vhost-user", "virtio"]
description = "A framework to build vhost-user backend service daemon"
repository = "https://github.com/rust-vmm/vhost"
edition = "2021"
license = "Apache-2.0"

[features]
xen = ["vm-memory/xen", "vhost/xen"]
postcopy = ["vhost/postcopy", "userfaultfd"]

[dependencies]
libc = "0.2.39"
log = "0.4.17"
userfaultfd = { version = "0.8.1", optional = true }
vhost = { path = "../vhost", version = "0.13.0", features = ["vhost-user-backend"] }
virtio-bindings = { workspace = true }
virtio-queue = { workspace = true }
vm-memory = { workspace = true, features = ["backend-mmap", "backend-atomic", "backend-bitmap"] }
vmm-sys-util = { workspace = true }

[dev-dependencies]
nix = { version = "0.29", features = ["fs"] }
vhost = { path = "../vhost", version = "0.13.0", features = ["test-utils", "vhost-user-frontend", "vhost-user-backend"] }
vm-memory = { workspace = true, features = ["backend-mmap", "backend-atomic"] }
tempfile = "3.2.0"
