[package]
name = "vhost-user-backend"
version = "0.8.0"
authors = ["The Cloud Hypervisor Authors"]
keywords = ["vhost-user", "virtio"]
description = "A framework to build vhost-user backend service daemon"
repository = "https://github.com/rust-vmm/vhost"
edition = "2018"
license = "Apache-2.0"

[dependencies]
libc = "0.2.39"
log = "0.4.17"
vhost = { path = "../vhost", features = ["vhost-user-slave"] }
virtio-bindings = { git = "https://github.com/vireshk/vm-virtio", branch = "main" }
virtio-queue = { git = "https://github.com/vireshk/vm-virtio", branch = "main" }
vm-memory = { git = "https://github.com/vireshk/vm-memory", branch = "main", features = ["backend-mmap", "backend-atomic"] }
vmm-sys-util = "0.11.0"

[dev-dependencies]
nix = "0.26"
vhost = { path = "../vhost", features = ["vhost-user-master", "vhost-user-slave"] }
vm-memory = { git = "https://github.com/vireshk/vm-memory", branch = "main", features = ["backend-mmap", "backend-atomic", "backend-bitmap"] }
tempfile = "3.2.0"
