[package]
name = "vhost"
version = "0.5.0"
keywords = ["vhost", "vhost-user", "virtio", "vdpa"]
description = "a pure rust library for vdpa, vhost and vhost-user"
authors = ["Liu Jiang <gerry@linux.alibaba.com>"]
repository = "https://github.com/rust-vmm/vhost"
documentation = "https://docs.rs/vhost"
readme = "README.md"
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
vhost-vsock = []
vhost-kern = []
vhost-vdpa = ["vhost-kern"]
vhost-net = ["vhost-kern"]
vhost-user = []
vhost-user-master = ["vhost-user"]
vhost-user-slave = ["vhost-user"]

[dependencies]
bitflags = "1.0"
libc = "0.2.39"

vmm-sys-util = "0.10.0"
vm-memory = "0.9.0"

[dev-dependencies]
tempfile = "3.2.0"
vm-memory = { version = "0.9.0", features=["backend-mmap"] }
serial_test = "0.5"
