[package]
name = "vhost"
version = "0.8.1"
keywords = ["vhost", "vhost-user", "virtio", "vdpa"]
description = "a pure rust library for vdpa, vhost and vhost-user"
authors = ["Liu Jiang <gerry@linux.alibaba.com>"]
repository = "https://github.com/rust-vmm/vhost"
documentation = "https://docs.rs/vhost"
readme = "README.md"
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
test-utils = []
vhost-vsock = []
vhost-kern = []
vhost-vdpa = ["vhost-kern"]
vhost-net = ["vhost-kern"]
vhost-user = []
vhost-user-master = ["vhost-user"]
vhost-user-slave = ["vhost-user"]
xen = ["vm-memory/xen"]

[dependencies]
bitflags = "1.0"
libc = "0.2.39"

vmm-sys-util = "0.11.0"
vm-memory = { version = "0.12.0", features=["backend-mmap"] }

[dev-dependencies]
tempfile = "3.2.0"
serial_test = "0.5"
