[package]
name = "vhost"
version = "0.8.1"
keywords = ["vhost", "vhost-user", "virtio", "vdpa"]
description = "a pure rust library for vdpa, vhost and vhost-user"
authors = ["Liu Jiang <gerry@linux.alibaba.com>"]
repository = "https://github.com/rust-vmm/vhost"
documentation = "https://docs.rs/vhost"
readme = "README.md"
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
test-utils = []
vhost-vsock = []
vhost-kern = []
vhost-vdpa = ["vhost-kern"]
vhost-net = ["vhost-kern"]
vhost-user = []
vhost-user-frontend = ["vhost-user"]
vhost-user-backend = ["vhost-user"]
xen = ["vm-memory/xen"]

[dependencies]
bitflags = "2.4"
libc = "0.2.39"

vmm-sys-util = "0.11.0"
vm-memory = { version = "0.13.0", features=["backend-mmap"] }

[dev-dependencies]
tempfile = "3.2.0"
serial_test = "2.0"
